<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGreen"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linerLayoutInputOperand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        app:layout_constraintVertical_bias="0.1">

        <EditText
            android:id="@+id/firstOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8pt"
            android:layout_marginEnd="8pt"
            android:layout_weight="1"
            android:hint="@string/_1st"
            android:textAlignment="center"
            android:textColor="@color/darkRed"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/secondOperandET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8pt"
            android:layout_marginEnd="8pt"
            android:layout_weight="1"
            android:hint="@string/_2nd"
            android:textAlignment="center"
            android:textColor="@color/darkRed"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerLayoutChoiceOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerLayoutInputOperand"
        app:layout_constraintVertical_bias="0.1">

        <Button
            android:id="@+id/buttonSumBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16pt"
            android:layout_marginEnd="16pt"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/btn_sum"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonDifBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16pt"
            android:layout_marginEnd="16pt"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/btn_dif"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/tv_result"
        android:textAlignment="center"
        android:textColor="@color/darkRed"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerLayoutChoiceOperator"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>